<resources>
  <string name="app_name">咔客</string>

  <!--home-->
  <string name="local_photo">本地图片</string>
  <string name="cloud_album">云相册</string>

  <!--user-->
  <string name="no_login">未登录</string>
  <string name="kake">咔客</string>
  <string name="help_feedback">帮助与反馈</string>
  <string name="about">关于</string>
  <string name="exist_login">退出登录</string>
  <string name="phone_user_name">手机号/用户名</string>
  <string name="password">密码</string>
  <string name="login">登录</string>
  <string name="login_success">登录成功</string>
  <string name="usr_name_or_psw_illegal">用户名或密码不符合复杂度要求,要求不少于6位的数字+字母</string>
  <string name="psw_illegal">密码不符合复杂度要求</string>
  <string name="register">注册</string>
  <string name="please_input_psw_again">请再次输入密码</string>
  <string name="please_input_psw">请输入密码</string>
  <string name="check_code">验证码</string>
  <string name="phone_number">手机号</string>
  <string name="please_input_new_psw">请输入新密码</string>
  <string name="submit">提交</string>
  <string name="phone_number_illegal">手机号不合法</string>
  <string name="psw_or_confirm_psw_not_empty">密码或确认密码不能为空</string>
  <string name="psw_and_confirm_psw_not_equal">密码与确认密码不一致，请重新输入</string>
  <string name="register_success">注册成功</string>
  <string name="submit_success">提交成功</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
