<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorC3"
  android:orientation="vertical">

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/colorPrimary">

    <ImageView
      android:id="@+id/back_image_view"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:paddingBottom="8dp"
      android:paddingTop="8dp"
      android:src="@drawable/nav_back"/>

    <com.home77.common.ui.widget.CircleImageView
      android:id="@+id/avatar_image_view"
      android:layout_width="76dp"
      android:layout_height="76dp"
      android:layout_below="@+id/back_image_view"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="32dp"
      android:scaleType="centerCrop"
      android:src="@drawable/user_avatar_def"/>

    <TextView
      android:id="@+id/name_text_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/avatar_image_view"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="4dp"
      android:singleLine="true"
      android:text="@string/no_login"
      android:textColor="@color/colorC1"
      android:textSize="@dimen/fontSizeF3"/>

    <ImageView
      android:id="@+id/edit_image_view"
      android:layout_width="14dp"
      android:layout_height="14dp"
      android:layout_alignBottom="@id/name_text_view"
      android:layout_below="@id/avatar_image_view"
      android:layout_marginLeft="4dp"
      android:layout_toRightOf="@id/name_text_view"
      android:src="@drawable/ic_edit_user"/>
  </RelativeLayout>

  <EditText
    android:id="@+id/user_name_edit_text"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="22dp"
    android:background="@color/colorC2"
    android:gravity="center_vertical"
    android:hint="@string/phone_number"
    android:inputType="phone"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:textColor="@color/colorC6"
    android:textSize="@dimen/fontSizeF2"/>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp"
    android:orientation="horizontal">

    <EditText
      android:id="@+id/check_code_edit_text"
      android:layout_width="0dp"
      android:layout_height="48dp"
      android:layout_weight="3"
      android:background="@color/colorC2"
      android:gravity="center_vertical"
      android:hint="@string/check_code"
      android:paddingLeft="16dp"
      android:paddingRight="16dp"
      android:textColor="@color/colorC6"
      android:textSize="@dimen/fontSizeF2"/>

    <TextView
      android:id="@+id/get_check_code_text_view"
      android:layout_width="0dp"
      android:layout_height="48dp"
      android:layout_weight="2"
      android:background="@color/colorAccent"
      android:gravity="center"
      android:paddingLeft="16dp"
      android:paddingRight="16dp"
      android:text="短信获取"
      android:textColor="@color/colorC1"
      android:textSize="@dimen/fontSizeF2"/>
  </LinearLayout>

  <EditText
    android:id="@+id/psw_edit_text"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp"
    android:background="@color/colorC2"
    android:gravity="center_vertical"
    android:hint="@string/please_input_new_psw"
    android:inputType="textPassword"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:textColor="@color/colorC6"
    android:textSize="@dimen/fontSizeF2"/>

  <TextView
    android:id="@+id/submit_text_view"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="32dp"
    android:background="@color/colorAccent"
    android:gravity="center"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:text="@string/submit"
    android:textColor="@color/colorC1"
    android:textSize="@dimen/fontSizeF2"/>

</LinearLayout>