<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorGrayF0"
  android:orientation="vertical">

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/colorPrimary">

    <ImageView
      android:id="@+id/back_image_view"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:paddingBottom="8dp"
      android:paddingTop="8dp"
      android:src="@mipmap/ic_back"/>

    <com.home77.common.ui.widget.CircleImageView
      android:id="@+id/avatar_image_view"
      android:layout_width="76dp"
      android:layout_height="76dp"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="80dp"
      android:scaleType="centerCrop"
      android:src="@mipmap/user_avatar_def"/>

    <TextView
      android:id="@+id/name_text_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/avatar_image_view"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="4dp"
      android:singleLine="true"
      android:text="@string/no_login"
      android:textColor="@color/colorWhite"
      android:textSize="@dimen/fontSizeInput"/>

    <ImageView
      android:id="@+id/edit_image_view"
      android:layout_width="14dp"
      android:layout_height="14dp"
      android:layout_alignBottom="@id/name_text_view"
      android:layout_below="@id/avatar_image_view"
      android:layout_marginLeft="4dp"
      android:layout_toRightOf="@id/name_text_view"
      android:src="@mipmap/ic_edit_user"/>
  </RelativeLayout>

  <RelativeLayout
    android:id="@+id/list_item_kake"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="@color/colorGrayF8">

    <ImageView
      android:id="@+id/list_kake_image_view"
      android:layout_width="32dp"
      android:layout_height="32dp"
      android:layout_centerVertical="true"
      android:layout_marginLeft="16dp"
      android:src="@mipmap/list_menu_kake"/>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerVertical="true"
      android:layout_marginLeft="8dp"
      android:layout_toRightOf="@id/list_kake_image_view"
      android:singleLine="true"
      android:text="@string/kake"
      android:textColor="@color/colorBlack66"
      android:textSize="@dimen/fontSizeButton"/>

    <ImageView
      android:layout_width="24dp"
      android:layout_height="24dp"
      android:layout_alignParentRight="true"
      android:layout_centerVertical="true"
      android:layout_marginRight="16dp"
      android:src="@mipmap/list_ic_forward"/>
  </RelativeLayout>

  <RelativeLayout
    android:id="@+id/list_item_photo"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:layout_marginTop="12dp"
    android:background="@color/colorGrayF8">

    <ImageView
      android:id="@+id/list_photo_image_view"
      android:layout_width="32dp"
      android:layout_height="32dp"
      android:layout_centerVertical="true"
      android:layout_marginLeft="16dp"
      android:src="@mipmap/list_menu_uploadedpho"/>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerVertical="true"
      android:layout_marginLeft="8dp"
      android:layout_toRightOf="@id/list_photo_image_view"
      android:singleLine="true"
      android:text="@string/cloud_gallery"
      android:textColor="@color/colorBlack66"
      android:textSize="@dimen/fontSizeButton"/>

    <ImageView
      android:layout_width="24dp"
      android:layout_height="24dp"
      android:layout_alignParentRight="true"
      android:layout_centerVertical="true"
      android:layout_marginRight="16dp"
      android:src="@mipmap/list_ic_forward"/>
  </RelativeLayout>

  <RelativeLayout
    android:id="@+id/list_item_help"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:layout_marginTop="1dp"
    android:background="@color/colorGrayF8">

    <ImageView
      android:id="@+id/list_help_image_view"
      android:layout_width="32dp"
      android:layout_height="32dp"
      android:layout_centerVertical="true"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="1dp"
      android:src="@mipmap/list_menu_help"/>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerVertical="true"
      android:layout_marginLeft="8dp"
      android:layout_toRightOf="@id/list_help_image_view"
      android:singleLine="true"
      android:text="@string/help_feedback"
      android:textColor="@color/colorBlack66"
      android:textSize="@dimen/fontSizeButton"/>

    <ImageView
      android:layout_width="24dp"
      android:layout_height="24dp"
      android:layout_alignParentRight="true"
      android:layout_centerVertical="true"
      android:layout_marginRight="16dp"
      android:src="@mipmap/list_ic_forward"/>
  </RelativeLayout>

  <RelativeLayout
    android:id="@+id/list_item_about"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:layout_marginTop="1dp"
    android:background="@color/colorGrayF8">

    <ImageView
      android:id="@+id/list_about_image_view"
      android:layout_width="32dp"
      android:layout_height="32dp"
      android:layout_centerVertical="true"
      android:layout_marginLeft="16dp"
      android:src="@mipmap/list_menu_about"/>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerVertical="true"
      android:layout_marginLeft="8dp"
      android:layout_toRightOf="@id/list_about_image_view"
      android:singleLine="true"
      android:text="@string/about"
      android:textColor="@color/colorBlack66"
      android:textSize="@dimen/fontSizeButton"/>

    <ImageView
      android:layout_width="24dp"
      android:layout_height="24dp"
      android:layout_alignParentRight="true"
      android:layout_centerVertical="true"
      android:layout_marginRight="16dp"
      android:src="@mipmap/list_ic_forward"/>
  </RelativeLayout>

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
      android:id="@+id/exist_login_text_view"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:layout_alignParentBottom="true"
      android:layout_marginBottom="26dp"
      android:layout_marginLeft="24dp"
      android:layout_marginRight="24dp"
      android:background="@color/colorGrayF8"
      android:gravity="center"
      android:text="@string/exist_login"
      android:textColor="@color/colorBlack66"
      android:textSize="@dimen/fontSizeButton"/>
  </RelativeLayout>
</LinearLayout>